--- a/FirstPractice/app/build.gradle
+++ b/FirstPractice/app/build.gradle
@@ -1,6 +1,9 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+
+    // Parcelize
+    id("kotlin-parcelize")
 }
 
 android {
