--- a/SecondPractice/app/build.gradle
+++ b/SecondPractice/app/build.gradle
@@ -38,6 +38,10 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.annotation:annotation:1.3.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
+
     // Definitions
     def retrofitVersion = '2.9.0'
     def glideVersion = '4.14.2'
