--- a/SecondPractice/app/src/main/AndroidManifest.xml
+++ b/SecondPractice/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.rgp.firstpractice">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -15,6 +15,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FirstPractice"
         tools:targetApi="33">
+        <activity
+            android:name=".view.activities.LoginActivity"
+            android:exported="false" />
         <activity
             android:name=".view.activities.LyricsCatalogActivity"
             android:exported="false" />
