--- a/SecondPractice/app/build.gradle
+++ b/SecondPractice/app/build.gradle
@@ -4,6 +4,7 @@ plugins {
 
     // Parcelize
     id("kotlin-parcelize")
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -41,6 +42,7 @@ dependencies {
     implementation 'androidx.annotation:annotation:1.3.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
+    implementation 'com.google.firebase:firebase-auth-ktx:21.0.3'
 
     // Definitions
     def retrofitVersion = '2.9.0'
@@ -60,6 +62,9 @@ dependencies {
 
     // Glide
     implementation "com.github.bumptech.glide:glide:$glideVersion"
+
+    //Google Maps
+    implementation 'com.google.android.gms:play-services-maps:18.1.0'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
