--- a/SecondPractice/app/src/main/AndroidManifest.xml
+++ b/SecondPractice/app/src/main/AndroidManifest.xml
@@ -15,6 +15,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FirstPractice"
         tools:targetApi="33">
+
+        <meta-data android:name="com.google.android.geo.API_KEY" android:value="@string/google_maps_key"/>
+
+        <activity
+            android:name=".view.activities.MapActivity"
+            android:exported="false" />
         <activity
             android:name=".view.activities.LoginActivity"
             android:exported="false" />
